# experiments

./: .gitignore  README.md  azure-pipelines.yml  cpu.yml  devcontainer.Dockerfile  env.yml  env_macos.yml  env_macos_intel.yml  environment.yml  envlinux.yml  envmacos.yml  envrionment.yml  envwin.yml  envwsl.txt  exp.yml  experiments.yml  macos.yml  pyproject.toml  requirements-nix.txt  requirements.txt  setup_env.sh  winreqs.txt
bert_fine_tune/: dataset.py  main.py  model.py  test.py  trainer.py
bert_fine_tune_sentiment/: corpus.py  dataset.py  main.py  test.py
bn_hate_speech/: hate_speech_bn.ipynb
bn_translit_sent/: bn_transliteration_bert_sentiment.ipynb
clip/: clip-vit-large-patch14-336.ipynb  main.ipynb  mn.py  mnist.ipynb  mnist_batched.ipynb  model_with_projection_hf.ipynb
cnn_out_dim/: cnn_dim.ipynb
color_channels/: channels.ipynb
diabetic_retinopathy/: notebook.ipynb
fast_exp_mod/: fast_exp_mod.ipynb
fruitify-torch-draft/: fruitify-draft.ipynb
gemma/: gemma2-27.ipynb
gqa/: read_q.ipynb  what_does_clip_say.ipynb
langchain/: intro.ipynb
lightning_bert_comet/: classifier.py  main.py
linreg_pytorch/: linreg_pytorch.ipynb
llama/: llama_load.ipynb
lm/: attention.ipynb  ngram.ipynb  text_gen.ipynb  unigram.ipynb  utils.py
log_reg/: log_reg.ipynb
lstm_pos_tagging/: character_rep.ipynb
lstm_word2vec_pos/: eval.ipynb  pos.ipynb  v2.ipynb  w2v_extra_idx.ipynb
megatron-bert-case-345m/: megatron-bert-cased-345.ipynb
nn_scratch/: nn_scratch.ipynb
performer_fine_tune_sentiment/: dataset.py  helpers.py  model.py  test.py  trainer.py
(+44 files in other folders)
