[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
transformers = "^4.40.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
accelerate = "^0.29.3"
datasets = "^2.19.0"
nltk = "^3.8.1"
einops = "^0.7.0"
autopep8 = "^2.1.0"
scikit-image = "^0.23.2"
openai = "^1.23.2"
tensorboard = "^2.16.2"
wandb = "^0.16.6"
spacy = "^3.7.4"
lightning = "^2.2.2"
torchmetrics = "^1.3.2"
peft = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
